--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     "You're everything I wanted",
     "Never in my life have I been more sure.",
     "You're everything I wanted.",
-    "You are gayyy"
+    "I miss you"
   ];
   
   let index = 0;
